fixed card spacing

--- a/index.css
+++ b/index.css
@@ -35,6 +35,8 @@ body {
 	margin-right: 1rem;
 	text-align: center;
 	max-width: 50rem;
+	padding-left: .5rem;
+	padding-right: .5rem;
 }
 
 .main, .subheading {
@@ -145,12 +147,12 @@ p {
 	display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-	/* border: solid 2px var(--font-color); */
+    justify-content: space-between;
     padding: 4px;
-	height: 17rem;
+	height: auto;
 	border-top: none;
 	background-color: #86A59C;
+
 }
 
 .card-text {
@@ -163,6 +165,7 @@ p {
     width: 100%;
     font-size: 2rem;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
@@ -214,24 +217,26 @@ ol {
 .desktop {
 	font-weight: normal;
     font-size: 1rem;
-    margin-bottom: 10rem;
+    /* margin-bottom: 10rem; */
     margin: 0;
+	margin-top: -.5rem;
     padding: 0;
-    position: absolute;
+    /* position: absolute; */
     top: 2rem;
 }
 
 .card-body > a {
-	position: absolute;
+	/* position: absolute; */
 	margin-bottom: .5rem;
 	bottom: 0;
 }
 
 .card-title {
-	position: absolute;
+	/* position: absolute; */
 	top: 0;
 	border-bottom: solid 1px #2B303A;
 	width: 80%;
+	line-height: 20px;
 }
 
 .btn-primary {
@@ -245,6 +250,8 @@ ol {
     align-items: center;
     text-decoration: underline;
 	border: none;
+	margin-top: .5rem;
+	margin-bottom: .5rem;
 }
 
 .card-title:has(> .desktop) {
